# gym-management

./: Dockerfile  README.md  build.sh  docker-compose.yaml  pyproject.toml  requirements.txt  vercel.json
customers/migrations/: 0001_initial.py
gym_management/: settings.py  urls.py
memberships/: admin.py  models.py
memberships/migrations/: 0002_membershipsubscription_active_and_more.py
src/customers/: admin.py  models.py
src/gym_management/: asgi.py  settings.py  urls.py  wsgi.py
src/memberships/migrations/: 0001_initial.py
