[tool.poetry]
name = "gym-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.2"
PyMySQL = "^1.1.1"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
